gobmkida/g1/gg_srand
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gg_srand/src/utils/random.c:591:33: error: use of undeclared identifier 'unk_B93F64'
while ( v1 != ( unsigned int *)&unk_B93F64 ); 
                                ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gg_srand/src/obj/5/random.o] Error 1
